force-app/main/default/objects/Commission__c/fields/Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Approved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user who approved the Commission record.</description>
    <label>Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Commission_Approved_By</relationshipName>
    <type>Lookup</type>
</CustomField>