force-app/main/default/objects/Commission__c/fields/Chargeback_Won_by_10X__c.field-meta.xml
<CustomField>
    <fullName>Chargeback_Won_by_10X__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If this is checked this means that this commission record was created because 10X has won the chargeback</inlineHelpText>
    <label>Chargeback Won by 10X</label>
    <type>Checkbox</type>
</CustomField>