force-app/main/default/objects/Commission__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The assigned employee to the commission record.</description>
    <label>Employee</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Commission_Employee</relationshipName>
    <type>Lookup</type>
</CustomField>