force-app/main/default/objects/Commission__c/fields/Flat_Commission_Value__c.field-meta.xml
<CustomField>
    <fullName>Flat_Commission_Value__c</fullName>
    <formula>Commission_Summary__r.Flat_Commission_Rule__r.Commission_Percent__c * Flat_Rate_Sales_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flat Commission Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>