force-app/main/default/objects/Commission__c/fields/Flat_Rate_Sales_Total__c.field-meta.xml
<CustomField>
    <fullName>Flat_Rate_Sales_Total__c</fullName>
    <description>A calculated field that will show the total sales value made by the employee based on the Flat Rate Sales Value on the related Commission Records. This field will be calculated via APEX Rollup.</description>
    <label>Flat Rate Sales Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>