force-app/main/default/objects/Commission__c/fields/Rejected_By__c.field-meta.xml
<CustomField>
    <fullName>Rejected_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user who rejected the Commission record.</description>
    <label>Rejected By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Commission_Rejected_By</relationshipName>
    <type>Lookup</type>
</CustomField>