force-app/main/default/objects/Commission__c/fields/Tiered_Commission_Value__c.field-meta.xml
<CustomField>
    <fullName>Tiered_Commission_Value__c</fullName>
    <formula>Commission_Summary__r.Tiered_Commission_Rule__r.Commission_Percent__c * Tiered_Rate_Sales_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tiered Commission Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>