force-app/main/default/objects/Commission__c/validationRules/Commission_Approved_By_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Commission_Approved_By_Required</fullName>
    <active>false</active>
    <description>Commission_Approved_By_Required</description>
    <errorConditionFormula>AND(
ISPICKVAL( Status__c , &apos;Commission Approved&apos;),
ISBLANK( Approved_By__c )
)</errorConditionFormula>
    <errorDisplayField>Approved_By__c</errorDisplayField>
    <errorMessage>Approved By must be filled in when status is approved</errorMessage>
</ValidationRule>