force-app/main/default/objects/Commission__c/validationRules/Commission_Approved_On_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Commission_Approved_On_Required</fullName>
    <active>false</active>
    <description>Commission_Approved_On_Required</description>
    <errorConditionFormula>AND(
ISPICKVAL( Status__c , &apos;Commission Approved&apos;),
ISBLANK( Approved_On_DateTime__c  )
)</errorConditionFormula>
    <errorDisplayField>Approved_On_DateTime__c</errorDisplayField>
    <errorMessage>Approved On must be filled in when when status is approved</errorMessage>
</ValidationRule>