force-app/main/default/objects/Commission__c/validationRules/Commission_Rejection_Reason_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Commission_Rejection_Reason_Required</fullName>
    <active>true</active>
    <description>Commission_Rejection Reason_Required</description>
    <errorConditionFormula>AND(
ISPICKVAL( Status__c , &apos;Commission Rejected&apos;),
ISBLANK(   TEXT(Rejection_Reason__c) )
)</errorConditionFormula>
    <errorDisplayField>Rejection_Reason__c</errorDisplayField>
    <errorMessage>Rejection Reason must be filled in when status is rejected</errorMessage>
</ValidationRule>