force-app/main/default/objects/Commission__c/validationRules/Commission_Status_Approved.validationRule-meta.xml
<ValidationRule>
    <fullName>Commission_Status_Approved</fullName>
    <active>true</active>
    <description>Only the Finance Team and System Administrators should be able to update the commission status to Approved

This will need to allow users to create commission with the status of Approved but shouldn’t allow users to change the status to Approved</description>
    <errorConditionFormula>AND(
ISCHANGED(Status__c),
ISPICKVAL(Status__c,&apos;Commission Approved&apos;),
$Profile.Name &lt;&gt; &apos;System Administrator&apos;,
$Profile.Name &lt;&gt; &apos;Finance&apos;,
$UserRole.Name &lt;&gt; &apos;CFO&apos;
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>You cannot update the commission status to approved</errorMessage>
</ValidationRule>