force-app/main/default/objects/Commission__c/listViews/All_Commissions.listView-meta.xml
<ListView>
    <fullName>All_Commissions</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Opportunity__c</columns>
    <columns>Status__c</columns>
    <columns>Employee__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Commissions</label>
</ListView>